approaches/istio/expose-services.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
    name: cross-network-gateway
spec:
    selector:
        istio: eastwestgateway
    servers:
        - port:
              number: 15443
              name: tls
              protocol: TLS
          tls:
              mode: AUTO_PASSTHROUGH
          hosts:
              - "*.local"
